--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,20 +7,42 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="
   {{ url_for('static', filename="css/style.css") }} ">
-  <title>Document</title>
+
+  <title>App chuva</title>
+
+  <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDDMw2G-jLyqh0QXW0zd9qBW_R1Ko6oSgY&callback=console.debug&libraries=maps,marker&v=beta"></script>
+
 </head>
-<body>
+<body class="body-color">
   
-  <div class="container">
-    <div class="row">
-      <div class="col">oi</div>
-      <div class="col">oi</div>
-      <div class="col">oi</div>
+  <div class="container h-75 container-color p-5 mt-5 rounded">
+    <div class="row h-100">
+      <div class="col-3">
+        <form action="" method="post" class="flex-column gap-5 d-flex">
+          <div class="row"><h1 class="text-center">Ano: </h1></div>
+          <div class="row"><input type="number" name="ano" id="inputAno" min="1974" max="2024" class="form-control" placeholder="1974 / 2024"></div>
+          <div class="row"><h1 class="text-center">Mês: </h1></div>
+          <div class="row"><input type="number" name="mes" id="inputMes" min="1" max="12" class="form-control" placeholder="01 / 12"></div>
+          <input type="number" name="postId" id="inputId" class="d-none">
+          <button type="submit" class="btn btn-primary">Gerar tabelas</button>
+        </form>
+        
+      </div>
+      <div class="col">
+        <gmp-map center="-5.49,-39.34" zoom="6" map-id="DEMO_MAP_ID" class="rounded">
+          {% for cord in cords %}
+            <gmp-advanced-marker position="{{cord.lat}},{{cord.lon}}" title="My location" value = "{{cord.id}}"></gmp-advanced-marker>
+          {% endfor %}
+        </gmp-map>
+      </div>
     </div>
   </div>
 
+  
   <script src="
   {{ url_for('static', filename="js/script.js") }}
   "></script>
+
+
 </body>
 </html>
