--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,52 +1,180 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+            crossorigin="anonymous"
+        >
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        <title>App chuva</title>
+        <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDDMw2G-jLyqh0QXW0zd9qBW_R1Ko6oSgY&callback=console.debug&libraries=maps,marker&v=beta"></script>
+        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+        <link rel="stylesheet" href="
   {{ url_for('static', filename="css/style.css") }} ">
+    </head>
+    <body class="body-color">
+        <div class="container h-75 container-color p-5 mt-5 rounded">
+            <div class="row h-100">
+                <div class="col-3">
+                    <div class="row">
+                        <form action="" method="post" class="flex-column gap-5 d-flex">
+                            <div class="row">
+                                <h1 class="text-center">Ano:</h1>
+                            </div>
+                            <div class="row">
+                                <input
+                                    type="number"
+                                    name="ano"
+                                    id="inputAno"
+                                    min="1974"
+                                    max="2024"
+                                    class="form-control"
+                                    placeholder="1974 / 2024"
+                                    required
 
-  <title>App chuva</title>
+                                >
+                            </div>
+                            <div class="row">
+                                <h1 class="text-center">Mês:</h1>
+                            </div>
+                            <div class="row">
+                                <input
+                                    type="number"
+                                    name="mes"
+                                    id="inputMes"
+                                    min="1"
+                                    max="12"
+                                    class="form-control"
+                                    placeholder="01 / 12"
+                                    required
 
-  <script async src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDDMw2G-jLyqh0QXW0zd9qBW_R1Ko6oSgY&callback=console.debug&libraries=maps,marker&v=beta"></script>
+                                >
+                            </div>
+                            <input
+                                type="number"
+                                name="postoId"
+                                id="inputId"
+                                class="d-none"
+                                required
+                            >
+                            <div class="row">
+                                <label id="posto" class="form-label p-0 lead">Posto: <p class="text-danger">Nenhum posto selecionado</p></label>
+                            </div>
+                            <div class="row">
+                                <button type="submit" class="btn btn-primary">Gerar tabelas</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+                <div class="col">
+                    <gmp-map
+                        center="-5.49,-39.34"
+                        zoom="6"
+                        map-id="DEMO_MAP_ID"
+                        class="rounded"
+                    >
+                        {% for cord in cords %}
+                        <gmp-advanced-marker position="{{cord.lat}},{{cord.lon}}" title="Posto {{cord.id}}" value="{{cord.id}}"></gmp-advanced-marker>
+                        {% endfor %}
+                    </gmp-map>
+                </div>
+            </div>
 
-</head>
-<body class="body-color">
-  
-  <div class="container h-75 container-color p-5 mt-5 rounded">
-    <div class="row h-100">
-      <div class="col-3">
-        <div class="row">
-          <form action="" method="post" class="flex-column gap-5 d-flex">
-            <div class="row"><h1 class="text-center">Ano: </h1></div>
-            <div class="row"><input type="number" name="ano" id="inputAno" min="1974" max="2024" class="form-control" placeholder="1974 / 2024"></div>
-            <div class="row"><h1 class="text-center">Mês: </h1></div>
-            <div class="row"><input type="number" name="mes" id="inputMes" min="1" max="12" class="form-control" placeholder="01 / 12"></div>
-            <input type="number" name="postoId" id="inputId" class="d-none">
-            <div class="row"><label id="posto" class="form-label p-0 lead">Posto: Nenhum posto selecionado</label></div>
-            <div class="row"><button type="submit" class="btn btn-primary">Gerar tabelas</button></div>
-            
-            
-          </form>
+            {% if post %}
+              <div class="row mt-5 text-center">
+                <h1>Diário</h1>
+                <canvas id="lineChart1" width="350" height="200"></canvas>
+              </div>
+              <div class="row mt-5 text-center">
+                <h1 >Mensal</h1>
+                <canvas id="lineChart2" width="350" height="200"></canvas>
+              </div>
+              <div class="row mt-5 text-center">
+                <h1>Anual</h1>
+                <canvas id="lineChart3" width="350" height="200"></canvas>
+              </div>
+            {% endif %}
+
         </div>
-      </div>
-      <div class="col">
-        <gmp-map center="-5.49,-39.34" zoom="6" map-id="DEMO_MAP_ID" class="rounded">
-          {% for cord in cords %}
-            <gmp-advanced-marker position="{{cord.lat}},{{cord.lon}}" title="Posto {{cord.id}}" value = "{{cord.id}}"></gmp-advanced-marker>
-          {% endfor %}
-        </gmp-map>
-      </div>
-    </div>
-  </div>
-
-  
+        
   <script src="
   {{ url_for('static', filename="js/script.js") }}
   "></script>
 
+      {%if post %}
+      <script>
+        const ctx1 = document.getElementById('lineChart1')
+        const ctx2 = document.getElementById('lineChart2')
+        const ctx3 = document.getElementById('lineChart3')
 
-</body>
+
+        new Chart(ctx1, {
+          type: 'line',
+          data: {
+            labels: {{diario[0]}},
+            datasets: [{
+              label: '# of Votes',
+              data: {{diario[1]}},
+              borderWidth: 1
+            }]
+          },
+          options: {
+            responsive: true,
+            scales: {
+              y: {
+                suggestedMin: 0,
+                suggestedMax: 75
+              }
+            }
+          }
+        });
+
+        new Chart(ctx2, {
+          type: 'line',
+          data: {
+            labels: {{mensal[0]}},
+            datasets: [{
+              label: '# of Votes',
+              data: {{mensal[1]}},
+              borderWidth: 1
+            }]
+          },
+          options: {
+            responsive: true,
+            scales: {
+              y: {
+                suggestedMin: 0,
+                suggestedMax: 300
+              }
+            }
+          }
+        });
+
+        new Chart(ctx3, {
+          type: 'line',
+          data: {
+            labels: {{anual[0]}},
+            datasets: [{
+              label: '# of Votes',
+              data: {{anual[1]}},
+              borderWidth: 1
+            }]
+          },
+          options: {
+            responsive: true,
+            scales: {
+              y: {
+                suggestedMin: 0,
+                suggestedMax: 1000
+              }
+            }
+          }
+        });
+      </script>
+      {%endif%}
+    </body>
 </html>
