--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -88,14 +88,19 @@
               <div class="row mt-5 text-center">
                 <h1>Diário</h1>
                 <canvas id="lineChart1" width="350" height="200"></canvas>
+                <p class="lead">Série temporal diária de chuva com base na data escolhida</p>
               </div>
               <div class="row mt-5 text-center">
                 <h1 >Mensal</h1>
                 <canvas id="lineChart2" width="350" height="200"></canvas>
+                <p class="lead">Série temporal do acumulado mensal de chuva dos últimos 12 meses</p>
+                
               </div>
               <div class="row mt-5 text-center">
                 <h1>Anual</h1>
                 <canvas id="lineChart3" width="350" height="200"></canvas>
+                <p class="lead">Série temporal do acumulado anual de chuva dos últimos 10 anos</p>
+                
               </div>
             {% endif %}
 
